[gd_scene load_steps=2 format=3 uid="uid://6d2jst8ga4le"]

[ext_resource type="Script" path="res://addons/twitcher/lib/oOuch/token_info.gd" id="1_j0blf"]

[node name="TokenInfo" type="GridContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 2
script = ExtResource("1_j0blf")

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderLarge"

[node name="TokenValidTitle" type="Label" parent="."]
layout_mode = 2
text = "Token Valid:"

[node name="TokenValidValue" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="RefreshTokenTitle" type="Label" parent="."]
layout_mode = 2
text = "Refresh Token Available:"

[node name="RefreshTokenValue" type="CheckBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
disabled = true
button_pressed = true

[node name="TokenScopeTitle" type="Label" parent="."]
layout_mode = 2
text = "Token Scope:"

[node name="TokenScopeValue" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
